<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">


	<TextView
		android:id="@+id/coop_info"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="4dp"
		android:layout_marginTop="4dp"
		android:text="@string/all_coop_info"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/player_dropdown_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="4dp"
		android:layout_marginTop="4dp"
		android:text="@string/player_name_dropdown_title"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/coop_info" />

	<Spinner
		android:id="@+id/person_spinner"
		android:layout_width="250dp"
		android:layout_height="48dp"
		android:layout_marginStart="4dp"
		android:layout_marginTop="4dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/player_dropdown_title">

	</Spinner>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/name_entry_section"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="4dp"
		android:layout_marginTop="4dp"
		android:visibility="gone"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/person_spinner">
		
		<TextView
			android:id="@+id/player_entry_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/player_name_entry_title"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />
		
		<EditText
			android:id="@+id/person_name"
			android:layout_width="wrap_content"
			android:layout_height="48dp"
			android:layout_marginTop="4dp"
			android:ems="10"
			android:hint="@string/player_name_entry_hint"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/player_entry_title" />

	</androidx.constraintlayout.widget.ConstraintLayout>

	<TextView
		android:id="@+id/count_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="4dp"
		android:layout_marginTop="4dp"
		android:text="@string/token_count_title"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/name_entry_section" />

	<ImageButton
		android:id="@+id/count_minus"
		android:layout_width="wrap_content"
		android:layout_height="48dp"
		android:layout_marginStart="4dp"
		android:layout_marginTop="4dp"
		android:contentDescription="@string/add_1_description"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/count_title"
		app:srcCompat="@drawable/remove" />

	<EditText
		android:id="@+id/count"
		android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:ems="3"
		android:hint="@string/token_entry_hint"
		android:inputType="number"
		app:layout_constraintBottom_toBottomOf="@+id/count_minus"
		app:layout_constraintStart_toEndOf="@+id/count_minus"
		app:layout_constraintTop_toTopOf="@+id/count_minus" />
	
	<ImageButton
		android:id="@+id/count_plus"
		android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:contentDescription="subtract_1_description"
		app:layout_constraintBottom_toBottomOf="@+id/count"
		app:layout_constraintStart_toEndOf="@+id/count"
		app:layout_constraintTop_toTopOf="@+id/count"
		app:srcCompat="@drawable/add" />

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/section_time"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="4dp"
		android:layout_marginTop="4dp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/count">

		<TextView
			android:id="@+id/date_title"
			android:layout_width="wrap_content"
			android:layout_height="16dp"
			android:text="@string/event_date_label"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent" />

		<Button
			android:id="@+id/date_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="4dp"
			android:text="@string/unset_button"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/date_title" />

		<TextView
			android:id="@+id/time_title"
			android:layout_width="wrap_content"
			android:layout_height="16dp"
			android:layout_marginStart="4dp"
			android:text="@string/event_time_label"
			app:layout_constraintStart_toEndOf="@+id/date_button"
			app:layout_constraintTop_toTopOf="parent" />

		<Button
			android:id="@+id/time_button"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="4dp"
			android:text="@string/unset_button"
			app:layout_constraintStart_toStartOf="@+id/time_title"
			app:layout_constraintTop_toBottomOf="@+id/time_title" />


	</androidx.constraintlayout.widget.ConstraintLayout>

	<ToggleButton
		android:id="@+id/direction_toggle"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="4dp"
		android:layout_marginTop="4dp"
		android:textOff="@string/toggle_player_sent_tokens"
		android:textOn="@string/toggle_player_received_tokens"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/section_time" />

	<!-- Button
		android:id="@+id/button_delete"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="4dp"
		android:layout_marginTop="4dp"
		android:text="Delete Event"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/direction_toggle" /-->
	
	<Button
		android:id="@+id/button_save"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="4dp"
		android:text="@string/button_save"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/direction_toggle" />


</androidx.constraintlayout.widget.ConstraintLayout>